--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="gallery">
-        <span class="letter" style="top: 10%; left: 5%;">A</span>
-        <span class="letter" style="top: 40%; left: 20%;">B</span>
-        <span class="letter" style="top: 60%; left: 40%;">C</span>
-        <span class="letter" style="top: 20%; left: 60%;">D</span>
-        <span class="letter" style="top: 70%; left: 80%;">E</span>
-    </div>
+      <div class="gallery">
+            <span class="letter" style="top: 10%; left: 5%;">A</span>
+            <span class="letter" style="top: 40%; left: 20%;">B</span>
+            <span class="letter" style="top: 60%; left: 40%;">C</span>
+            <span class="letter" style="top: 20%; left: 60%;">D</span>
+            <span class="letter" style="top: 70%; left: 80%;">E</span>
+            <span class="letter" style="top: 50%; left: 100%;">F</span>
+        </div>
     <script src="script.js"></script>
 </body>
 </html>
