--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Letter Drag Navigation</title>
+    <title>Infinite Letter Grid</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-    <body>
-      <div class="gallery">
-            <span class="letter" style="top: 10%; left: 5%;">A</span>
-            <span class="letter" style="top: 40%; left: 20%;">B</span>
-            <span class="letter" style="top: 60%; left: 40%;">C</span>
-            <span class="letter" style="top: 20%; left: 60%;">D</span>
-            <span class="letter" style="top: 70%; left: 80%;">E</span>
-            <span class="letter" style="top: 50%; left: 100%;">F</span>
-        </div>
+<body>
+    <div class="gallery"></div>
     <script src="script.js"></script>
 </body>
 </html>
